--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,11 @@ h1 {
   border-radius: 10px;
   /*margin-left: 5%;*/
 }
+
+.turnBlue {
+  background-color: blue;
+}
+
+.turnGreen {
+  background-color: green;
+}
