--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,33 @@ h1 {
   font-family: 'Press Start 2P', cursive;
 }
 
+.optionSelect {
+  font-size: 100%;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  border: red 1px;
+  color: red;
+  background-color: yellow;
+  padding: 1.5%;
+  margin: 1%
+}
+
+#resetButton {
+  font-size: 100%;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  border: 0px;
+  color: Red;
+  background-color: pink;
+  padding: 1.5%;
+  margin-left: 3%
+}
+
 .player-announcement{
   color: orange;
-  font-size: 150%;
+  font-size: 130%;
   background-color: blue
   text-transform: uppercase;
   text-align: center;
@@ -28,7 +52,7 @@ h1 {
 }
 
 .grid {
-  width: 200px;
+  width: 28%;
   height: 200px;
   background-color: gold;
   display: inline-block;
@@ -49,15 +73,4 @@ h1 {
   width: 52.5%;
   margin: 2% auto;
   text-align: center;
-}
-
-#resetButton {
-  font-size: 200%;
-  text-transform: uppercase;
-  text-align: center;
-  font-family: 'Press Start 2P', cursive;
-  border: 0px;
-  color: red;
-  background-color: transparent;
-  padding: 1%
 }
